--- a/src/app/contacts/contacts.component.html
+++ b/src/app/contacts/contacts.component.html
@@ -1,3 +1,31 @@
-<p>
-  contacts works!
-</p>
+<div class="button-row">
+  <a mat-fab color="primary" [routerLink]="['/Contacts-create']"><mat-icon>add</mat-icon></a>
+</div>
+
+<div class="example-container mat-elevation-z8">
+  <table mat-table #table [dataSource]="dateSource">
+
+    <ng-container matColumnDef="Name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let element" class="title-col">{{ element.Name }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="Email">
+      <th mat-header-cell *matHeaderCellDef>Email</th>
+      <td mat-cell *matCellDef="let element">{{ element.Email }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="Phone">
+      <th mat-header-cell *matHeaderCellDef>Phone</th>
+      <td mat-cell *matCellDef="let element">{{ element.Phone }}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr
+      mat-row
+      *matRowDef="let row; columns: displayedColumns"
+      [routerLink]="['/Contacts-details/', row.id]">
+    </tr>
+
+  </table>
+</div>
