--- a/src/app/contacts/contacts.component.css
+++ b/src/app/contacts/contacts.component.css
@@ -4,7 +4,7 @@
     max-height: 500px;
     min-width: 300px;
     overflow: auto;
-    margin: 10px;
+    
 }
 
 .title-col {
@@ -13,5 +13,5 @@
 }
 
 .button-row {
-    margin: 10px;
+    margin: 10px 0;
 }
