CRUD Components complete

--- a/src/app/contacts-edit/contacts-edit.component.html
+++ b/src/app/contacts-edit/contacts-edit.component.html
@@ -1,11 +1,11 @@
 <div class="button-row">
     <a mat-fab color="primary" (click)="contactDetails()"><mat-icon>show</mat-icon></a>
   </div>
-  <form [formGroup]="contactForm" (ngSubmit)="onFormSubmit(contactForm.value)">
+  <form [formGroup]="contactsForm" (ngSubmit)="onFormSubmit(contactsForm.value)">
     <mat-form-field class="example-full-width">
-      <input matInput placeholder="Name" formControlName="Name" [errorStateMatcher]="matcher" />
+      <input matInput placeholder="Name" formControlName="Name" />
       <mat-error>
-        <span *ngIf="!contactForm.get('Name').valid && contactForm.get('Name').touched"
+        <span *ngIf="!contactsForm.get('Name').valid && contactsForm.get('Name').touched"
           >Please enter contact name</span
         >
       </mat-error>
@@ -15,24 +15,23 @@
         matInput
         placeholder="Email"
         formControlName="Email"
-        [errorStateMatcher]="matcher"
       />
       <mat-error>
-        <span *ngIf="!contactForm.get('Email').valid && contactForm.get('Email').touched"
+        <span *ngIf="!contactsForm.get('Email').valid && contactsForm.get('Email').touched"
           >Please enter contacts email address</span
         >
       </mat-error>
     </mat-form-field>
     <mat-form-field class="example-full-width">
-      <input matInput placeholder="Phone" formControlName="Phone" [errorStateMatcher]="matcher" />
+      <input matInput placeholder="Phone" formControlName="Phone" />
       <mat-error>
-        <span *ngIf="!contactForm.get('Phone').valid && contactForm.get('Phone').touched"
+        <span *ngIf="!contactsForm.get('Phone').valid && contactsForm.get('Phone').touched"
           >Please enter contacts phone number</span
         >
       </mat-error>
     </mat-form-field>
     <div class="button-row">
-      <button type="submit" [disabled]="!contactForm.valid" mat-fab color="primary">
+      <button type="submit" [disabled]="!contactsForm.valid" mat-fab color="primary">
         <mat-icon>save</mat-icon>
       </button>
     </div>
